--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+//////////////////////////////////////////////// * PROJECT 1 * //////////////////////////////////////////////////////////////
+
 @import url("https://fonts.googleapis.com/css?family=Muli&display=swap");
 
 * {
@@ -53,3 +55,5 @@ body {
     display: none;
   }
 }
+
+//////////////////////////////////////////////// * PROJECT 1.1 * //////////////////////////////////////////////////////////////
